--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -36,9 +36,10 @@
                               <div class= "row">
                                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                   <div class="box">      
-                                    <div class="input-field">   
+                                    <div class="input-field">  
+                                     
                                     <%= text_field :horary, :lunesInicio,class: "timepicker" %>                      
-                                    <%= label(:horay,:lunesInicio, "Inicio") %>                             
+                                    <%= label(:horary,:lunesInicio, "Inicio") %>                             
                                     </div>
                                   </div>
                                 </div>
@@ -47,7 +48,7 @@
                                   <div class="box">                               
                                     <div class="input-field">                         
                                       <%= text_field :horary, :lunesFinal,class: "timepicker" %>                      
-                                      <%= label(:horay,:lunesFinal, "Inicio") %>                                   
+                                      <%= label(:horary,:lunesFinal, "Final") %>                                   
                                     </div>
                                   </div>
                                 </div>
@@ -62,7 +63,7 @@
                                   <div class="box">      
                                     <div class="input-field">                         
                                       <%= text_field :horary, :martesInicio,class: "timepicker" %>                      
-                                      <%= label(:horay,:martesInicio, "Inicio") %>                                   
+                                      <%= label(:horary,:martesInicio, "Inicio") %>                                   
                                     </div>
                                   </div>
                                 </div>
@@ -71,7 +72,7 @@
                                   <div class="box">                               
                                     <div class="input-field">                         
                                       <%= text_field :horary, :martesFinal,class: "timepicker" %>                      
-                                      <%= label(:horay,:martesFinal, "Inicio") %>                                   
+                                      <%= label(:horary,:martesFinal, "Inicio") %>                                   
                                     </div>
                                   </div>
                                 </div>
@@ -86,7 +87,7 @@
                                   <div class="box">      
                                     <div class="input-field">                         
                                       <%= text_field :horary, :miercolesInicio,class: "timepicker" %>                      
-                                      <%= label(:horay,:miercolesInicio, "Inicio") %>                                   
+                                      <%= label(:horary,:miercolesInicio, "Inicio") %>                                   
                                     </div>
                                   </div>
                                 </div>
@@ -95,7 +96,7 @@
                                   <div class="box">                               
                                     <div class="input-field">                         
                                       <%= text_field :horary, :miercolesFinal,class: "timepicker" %>                      
-                                      <%= label(:horay,:miercolesFinal, "Inicio") %>                                   
+                                      <%= label(:horary,:miercolesFinal, "Final") %>                                   
                                     </div>
                                   </div>
                                 </div>
@@ -110,7 +111,7 @@
                                   <div class="box">      
                                     <div class="input-field">                         
                                       <%= text_field :horary, :juevesInicio,class: "timepicker" %>                      
-                                      <%= label(:horay,:juevesInicio, "Inicio") %>                                   
+                                      <%= label(:horary,:juevesInicio, "Inicio") %>                                   
                                     </div>
                                   </div>
                                 </div>
@@ -119,7 +120,7 @@
                                   <div class="box">                               
                                     <div class="input-field">                         
                                       <%= text_field :horary, :juevesFinal,class: "timepicker" %>                      
-                                      <%= label(:horay,:juevesFinal, "Inicio") %>                                    
+                                      <%= label(:horary,:juevesFinal, "Inicio") %>                                    
                                     </div>
                                   </div>
                                 </div>
@@ -134,7 +135,7 @@
                                   <div class="box">      
                                     <div class="input-field">                         
                                       <%= text_field :horary, :viernesInicio,class: "timepicker" %>                      
-                                      <%= label(:horay,:viernesInicio, "Inicio") %>                                   
+                                      <%= label(:horary,:viernesInicio, "Inicio") %>                                   
                                     </div>
                                   </div>
                                 </div>
@@ -143,7 +144,7 @@
                                   <div class="box">                               
                                     <div class="input-field">                         
                                       <%= text_field :horary, :viernesFinal,class: "timepicker" %>                      
-                                      <%= label(:horay,:viernesFinal, "Inicio") %>                                  
+                                      <%= label(:horary,:viernesFinal, "Inicio") %>                                  
                                     </div>
                                   </div>
                                 </div>
@@ -158,7 +159,7 @@
                                   <div class="box">      
                                     <div class="input-field">                         
                                       <%= text_field :horary, :sabadoInicio,class: "timepicker" %>                      
-                                      <%= label(:horay,:sabadoInicio, "Inicio") %>                                   
+                                      <%= label(:horary,:sabadoInicio, "Inicio") %>                                   
                                     </div>
                                   </div>
                                 </div>
@@ -167,7 +168,7 @@
                                   <div class="box">                               
                                     <div class="input-field">                         
                                       <%= text_field :horary, :sabadoFinal,class: "timepicker" %>                      
-                                      <%= label(:horay,:sabadoFinal, "Inicio") %>                                   
+                                      <%= label(:horary,:sabadoFinal, "Inicio") %>                                   
                                     </div>
                                   </div>
                                 </div>
@@ -182,7 +183,7 @@
                                   <div class="box">      
                                     <div class="input-field">                         
                                       <%= text_field :horary, :domingoInicio,class: "timepicker" %>                      
-                                      <%= label(:horay,:domingoInicio, "Inicio") %>                                   
+                                      <%= label(:horary,:domingoInicio, "Inicio") %>                                   
                                     </div>
                                   </div>
                                 </div>
@@ -191,7 +192,7 @@
                                   <div class="box">                               
                                     <div class="input-field">                         
                                       <%= text_field :horary, :domingoFinal,class: "timepicker" %>                      
-                                      <%= label(:horay,:domingoFinal, "Inicio") %>                                   
+                                      <%= label(:horary,:domingoFinal, "Inicio") %>                                   
                                     </div>
                                   </div>
                                 </div>
