--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,3 +1,3 @@
 <%@texto= "Editar grupo #{@group.nombre}"%>
 
-<%= render 'form', group: @group %>
+<%= render 'form', group: @group,horary: @group.horary %>
