--- a/app/views/enrolls/show.html.erb
+++ b/app/views/enrolls/show.html.erb
@@ -1,19 +1,38 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Definitiva:</strong>
-  <%= @enroll.definitiva %>
-</p>
+<div class="row grey lighten-5 middle-xs no-margin alto80">    
+  <div class="container">
+    <div class="row center-xs" >
+      
+        <div class="col-xs-12
+                    col-sm-8
+                    col-md-6
+                    col-lg-6 ">
+          <div class="box">
+            <div class="card z-depth-3">
+              <div class="card-content black-text start-xs">
+                <span class="card-title center">Informacion de estudiante</span>
+                <b>Nombre de estudiante: </b><p><%=@enroll.student.user.nombre_completo%></p>
+                <b>Grupo: </b><p><%=@enroll.group.nombre%></p>
+                <b>Discipulado: </b><p><%=@enroll.group.discipleship.nombre%></p>
+                <b>Nota actual: </b><p><%=@enroll.definitiva%></p>
+                <b>Matricualdo desde: </b><p><%=@enroll.created_at%></p>
+                
+                <div class="actions center">
+                 
+                  <%= link_to  "Volver", enrolls_path, class: "waves-effect waves-teal btn-flat green-text" %>                
+                  
+                  <%= link_to  "Eliminar", @enroll, data: { confirm: 'Esta seguro?' },class: "waves-effect waves-teal btn-flat green-text", method: :delete %>
+                 
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+   
+    
+      
+   
+  </div>   
+</div>
 
-<p>
-  <strong>Discipleship:</strong>
-  <%= @enroll.discipleship %>
-</p>
-
-<p>
-  <strong>Student:</strong>
-  <%= @enroll.student %>
-</p>
-
-<%= link_to 'Edit', edit_enroll_path(@enroll) %> |
-<%= link_to 'Back', enrolls_path %>
