controller password comentario

--- a/app/views/enrolls/_grupos.html.erb
+++ b/app/views/enrolls/_grupos.html.erb
@@ -58,8 +58,8 @@
 <%end%>
 <%if @combo=='estudiante' %>
   <b>Nombre: </b><p><%=@estudiante.nombre_completo%></p>
-  <b>Docente a cargo: </b><p>algo</p>
-  <b>Estudiantes inscritos: </b><p>algo</p>
+  <b>Telefono </b><p><%=@estudiante.telefono%></p>
+  <b>Correo </b><p><%=@estudiante.email%></p>
 <% end %>
 
 
