--- a/app/views/enrolls/_form.html.erb
+++ b/app/views/enrolls/_form.html.erb
@@ -53,7 +53,7 @@
           </div>
           <div class="card-action">
             
-            <%= form.submit "Iniciar",class: "btn  waves-light  borde-radio-5" %>
+            <%= form.submit "Registrar",class: "btn  waves-light  borde-radio-5" %>
           </div> 
         <% end %>
       </div>
