--- a/app/assets/stylesheets/principal.scss
+++ b/app/assets/stylesheets/principal.scss
@@ -5,6 +5,18 @@ html,body{
 	height: 100%;
 	width: 100%;
 }
+
+.mobile-fab-tip {
+	position: fixed;
+	right: 85px;
+	padding:0px 0.5rem;
+	text-align: right;
+	background-color: #323232;
+	border-radius: 2px;
+	color: #FFF;
+	width:auto;
+}
+
 .no-margin{
 	margin: 0;
 }
