--- a/app/views/discipleships/index.html.erb
+++ b/app/views/discipleships/index.html.erb
@@ -18,10 +18,10 @@
                     col-md-6
                     col-lg-4 ">
           <div class="box">
-            <div class="card z-depth-3 borde-radio-10"   style="max-height: 250px">
+            <div class="card z-depth-2 borde-radio-10 hoverable"  >
               <div class="card-content black-text" >
                 <span class="card-title center-xs"><%=discipulado.nombre%></span>
-                <p  style="max-height: 250px"><%=discipulado.descripcion%></p>
+                <p  class="truncate"><%=discipulado.descripcion%></p>
                 
                 <div class="actions center">
                   <%= link_to  "Ver detalles", discipulado, class: "waves-effect waves-teal btn-flat " %>
