--- a/app/views/enrolls/index.html.erb
+++ b/app/views/enrolls/index.html.erb
@@ -11,8 +11,14 @@
 </div>
 <div class="container">
 
-<h1 >Matriculados</h1>
-<table class="highlight striped">
+
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+      <div class="box">
+        <div class="card z-depth-3 borde-radio-10">
+          <div class="card-content black-text center-xs" >
+            <span class="card-title center" >Matriculas</span>
+
+            <table class="highlight striped">
         <thead>
           <tr>
               <th>Identificacion</th>
@@ -37,14 +43,19 @@
             <td><%=enroll.group.discipleship.nombre%></td>
             <td><%=enroll.definitiva%></td>
             <td><%=enroll.created_at%></td>
-            <td><%= link_to 'Show', enroll %> </td>
-            <td><%= link_to 'Edit', edit_enroll_path(enroll) %></td>
-            <td><%= link_to 'Destroy', enroll, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Detalles', enroll %> </td>
+            <td><%= link_to 'Editar', edit_enroll_path(enroll) %></td>
+            <td><%= link_to 'Eliminar', enroll, method: :delete, data: { confirm: 'Esta seguro?' } %></td>
             
           </tr>
     <%end%>
           
         </tbody>
       </table>
+          </div>
+        </div>
+      </div>
+    </div>
+
 </div>
 <br>
