--- a/app/views/enrolls/show.html.erb
+++ b/app/views/enrolls/show.html.erb
@@ -1,5 +1,4 @@
-
-<div class="row grey lighten-5 middle-xs no-margin alto80">    
+<div class="row middle-xs no-margin alto80">    
   <div class="container">
     <div class="row center-xs" >
       
@@ -8,10 +7,10 @@
                     col-md-6
                     col-lg-6 ">
           <div class="box">
-            <div class="card z-depth-3">
+            <div class="card z-depth-3 borde-radio-10">
               <div class="card-content black-text start-xs">
                 <span class="card-title center">Informacion de estudiante</span>
-                <b>Nombre de estudiante: </b><p><%=@enroll.student.user.nombre_completo%></p>
+                <b>Nombre de estudiante: </b><p><%=@enroll.user.nombre_completo%></p>
                 <b>Grupo: </b><p><%=@enroll.group.nombre%></p>
                 <b>Discipulado: </b><p><%=@enroll.group.discipleship.nombre%></p>
                 <b>Nota actual: </b><p><%=@enroll.definitiva%></p>
