--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -6,7 +6,7 @@
                 <div class="card-content ">
                     <span class="card-title"><%=@texto%></span>
                     
-                    <%= form_for([@discipleship,@group]) do |f| %>
+                    <%= form_for(@datos) do |f| %>
                       <div class="row center-xs">
                          
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
