--- a/app/views/principal/home.html.erb
+++ b/app/views/principal/home.html.erb
@@ -1,4 +1,4 @@
-
-
-
-
+<h1>Usuarios registrados</h1>
+<%= line_chart User.group(:created_at).count %>
+<p>notas extendidas</p>
+<%= line_chart ExtendedNote.group(:created_at).count %>
