--- a/app/views/principal/home.html.erb
+++ b/app/views/principal/home.html.erb
@@ -5,6 +5,6 @@
 <p>notas extendidas con metodo dia</p>
 <%= line_chart ExtendedNote.group_by_day(:created_at).count %>
 <p>notas extendidas con metodo horas </p>
-<%= line_chart ExtendedNote.group_by_hoir(:created_at).count %>
+<%= line_chart ExtendedNote.group_by_hour(:created_at).count %>
 <p>notas extendidas con metodo minutos </p>
 <%= line_chart ExtendedNote.group_by_minute(:created_at).count %>
